--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pranesh Chowdhury</title>
+    <link rel="stylesheet" href="index.css">
+    <!-- Font Style -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+
 </head>
 <body>
     
+    <section>
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="name-highlight">Pranesh Chowdhury</span> Website</h1>
+            <h3>Professional web developer</h3>
+            <p>I have an experience in HTML, CSS, and javascript. I can build a world-class website that is more eye catching and colorful. If you want to know more about me. You can check out my profile. </p>
+        </div>
+        <div class="half-width">
+            <img src="image/Pranesh1.png">
+        </div>
+    </section>
+    
+
 </body>
 </html>
