--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-    
+    <!-- Top Section Start -->
     <section>
         <div class="half-width">
             <h1>Welcome To</h1>
@@ -25,6 +25,7 @@
             <img src="image/Pranesh1.png">
         </div>
     </section>
+    <!-- Top Section End -->
     
 
 </body>
