--- a/index.html
+++ b/index.html
@@ -14,18 +14,36 @@
 </head>
 <body>
     <!-- Top Section Start -->
-    <section>
+
+    <section class="top-banner">
+
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="name-highlight">Pranesh Chowdhury</span> Website</h1>
             <h3>Professional web developer</h3>
             <p>I have an experience in HTML, CSS, and javascript. I can build a world-class website that is more eye catching and colorful. If you want to know more about me. You can check out my profile. </p>
+            <a class="link-button" target="blank" href="https://www.linkedin.com/in/praneshchowdhury/">HIRE ME</a>
         </div>
+
         <div class="half-width">
             <img src="image/Pranesh1.png">
         </div>
     </section>
+
     <!-- Top Section End -->
+
+
+    <!-- Middle Section Start -->
+    <section >
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Practice makes a man Perfect</h3>
+            <p>I'm pationate about learning new things. Most of the time I spend for learning and studing new things. I'm sofisticated with new technologies. </p>
+        </div>
+        <div class="half-width">
+            <img src="">
+        </div>
+    </section>
     
 
 </body>
