Pranesh Made a new website

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pranesh Chowdhury</title>
     <link rel="stylesheet" href="index.css">
-    <!-- Font Style -->
+    <!-- Font Style | Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
@@ -14,13 +14,12 @@
 </head>
 <body>
     <!-- Top Section Start -->
-
     <section class="top-banner">
 
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="name-highlight">Pranesh Chowdhury</span> Website</h1>
-            <h3>Professional web developer</h3>
+            <h1><span class="orange-highlight">Pranesh Chowdhury</span> Website</h1>
+            <h2>Professional web developer</h2>
             <p>I have an experience in HTML, CSS, and javascript. I can build a world-class website that is more eye catching and colorful. If you want to know more about me. You can check out my profile. </p>
             <a class="link-button" target="blank" href="https://www.linkedin.com/in/praneshchowdhury/">HIRE ME</a>
         </div>
@@ -29,22 +28,48 @@
             <img src="image/Pranesh1.png">
         </div>
     </section>
-
     <!-- Top Section End -->
 
 
-    <!-- Middle Section Start -->
-    <section >
+    <!-- Dream Section Start -->
+    <section class="dream-area">
+
+        <div class="half-width">
+            <img src="image/Pranesh2.png">
+        </div>
+
         <div class="half-width">
             <h1>Dream Big</h1>
-            <h3>Practice makes a man Perfect</h3>
+            <h2>Become a Web developer Journey</h2>
             <p>I'm pationate about learning new things. Most of the time I spend for learning and studing new things. I'm sofisticated with new technologies. </p>
-        </div>
-        <div class="half-width">
-            <img src="">
+            <a class="link-button" target="blank" href="https://www.linkedin.com/in/praneshchowdhury/">DOWNLOAD RESUME</a>
         </div>
     </section>
-    
+    <!-- Dream Section End -->
+
+
+    <!-- Experience Section Start -->
+    <section class="experience-area">
+        <h1>Experience</h1>
+
+        <div id="full-stack" class="half-width single-experience">      <!--Here are tow class half-width and single-experience-->
+            <h1>Full Stack Developer</h1>
+            <h2 class="orange-highlight">2022 - Present | Pro Level Web Developer </h2>
+            <p>After learning and practicing most of the time in web developer carrier I learned the full stack developer. I learned Node.js, Express.js and Mongo DB for backend development. Also I'm trying to develop some projects. </p>
+        </div>
+
+        <div id="font-end" class="half-width single-experience">
+            <h1>Font-End Developer</h1>
+            <h2 class="orange-highlight">2020 - 2022 | Junior level Web Developer</h2>
+            <p>First I learned HTML, CSS. After basic of html and css I can make some website which is only for practice purpose. I develop my design skill in web designing. Though I'm not a designer I want to learn minimum level of knowledge about the Design Pattern. </p>
+        </div>
+    </section>
+    <!-- Experience Section End -->
+
+    <footer>
+        <p> @ Pranesh Chowdhury, All rights reserved. </p>
+    </footer>
+
 
 </body>
 </html>
