--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <!-- Top Section Start -->
     <section class="top-banner">
+        <!-- This section divided into two parts. -->
 
         <div class="half-width">
             <h1>Welcome To</h1>
@@ -58,7 +59,7 @@
             <p>After learning and practicing most of the time in web developer carrier I learned the full stack developer. I learned Node.js, Express.js and Mongo DB for backend development. Also I'm trying to develop some projects. </p>
         </div>
 
-        <div id="font-end" class="half-width single-experience">
+        <div id="font-end" class="half-width single-experience">        <!--Here are tow class half-width and single-experience-->
             <h1>Font-End Developer</h1>
             <h2 class="orange-highlight">2020 - 2022 | Junior level Web Developer</h2>
             <p>First I learned HTML, CSS. After basic of html and css I can make some website which is only for practice purpose. I develop my design skill in web designing. Though I'm not a designer I want to learn minimum level of knowledge about the Design Pattern. </p>
@@ -69,7 +70,6 @@
     <footer>
         <p> @ Pranesh Chowdhury, All rights reserved. </p>
     </footer>
-
 
 </body>
 </html>
